# DynamicConvexHull

./: CMakeLists.txt  README.md  main.cpp  smalltest.sh
include/: CHTree.h  CQTree.h  inexact.h
